# hetshuffle

./: ChangeLog  LICENSE  MANIFEST.in  README.md  README.txt  environment.yml  pyproject.toml  requirements.txt  setup.py  touch_commit.sh
hetdex_shuffle/: __init__.py  astrometry.py  copy_config.py  do_shuffle_target.py  findStars.py  fplane_provider.py  handle_local_catalogue.py  obj_dist_ifu_vis.py  parang.py  shuffle.py  sqlcl.py  visualize.py
hetdex_shuffle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hetdex_shuffle/configs/: fplane.txt  shuffle.cfg  shuffle_version
